--- a/home/dot_config/transmission-daemon/settings.json.tmpl
+++ b/home/dot_config/transmission-daemon/settings.json.tmpl
@@ -15,7 +15,7 @@
     "dht-enabled": false,
     "download-dir": "{{ .chezmoi.homeDir }}/Videos",
     "download-queue-enabled": true,
-    "download-queue-size": 5,
+    "download-queue-size": 3,
     "encryption": 2,
     "idle-seeding-limit": 5,
     "idle-seeding-limit-enabled": true,
@@ -37,15 +37,15 @@
     "preallocation": 1,
     "prefetch-enabled": true,
     "queue-stalled-enabled": true,
-    "queue-stalled-minutes": 30,
+    "queue-stalled-minutes": 15,
     "ratio-limit": 0.1,
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
     "rpc-authentication-required": true,
     "rpc-bind-address": "127.0.0.1",
     "rpc-enabled": true,
-    "rpc-host-whitelist": "",
-    "rpc-host-whitelist-enabled": false,
+    "rpc-host-whitelist": "localhost,*.local",
+    "rpc-host-whitelist-enabled": true,
     "rpc-password": "changeme",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
@@ -62,8 +62,8 @@
     "speed-limit-up": 10,
     "speed-limit-up-enabled": true,
     "start-added-torrents": true,
-    "trash-original-torrent-files": false,
-    "umask": "022",
+    "trash-original-torrent-files": true,
+    "umask": "077",
     "upload-slots-per-torrent": 14,
     "utp-enabled": false,
     "watch-dir": "{{ .chezmoi.homeDir }}/Downloads",
